fantasy-assistant/ops/bridge/base/cache-deployment.yaml
#! cache-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: cache
    namespace: ops
    labels:
        com.docker.compose.project: ops
        com.docker.compose.service: cache
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ops
            com.docker.compose.service: cache
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ops
                com.docker.compose.service: cache
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: cache
                  image: redis:7-alpine
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: [redis-cli ping]
                    periodSeconds: 10
                    timeoutSeconds: 3
                    failureThreshold: 3
                  ports:
                    - name: cache-6379
                      containerPort: 6379
