fantasy-assistant/ops/bridge/base/workers-deployment.yaml
#! workers-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: workers
    namespace: ops
    labels:
        com.docker.compose.project: ops
        com.docker.compose.service: workers
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ops
            com.docker.compose.service: workers
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ops
                com.docker.compose.service: workers
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: workers
                  image: ops-workers
                  imagePullPolicy: IfNotPresent
                  command: [python app/workers/scheduler.py]
                  ports:
                    - name: workers-8000
                      containerPort: 8000
