fantasy-assistant/ops/bridge/base/cache-expose.yaml
#! cache-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: cache
    namespace: ops
    labels:
        com.docker.compose.project: ops
        com.docker.compose.service: cache
spec:
    selector:
        com.docker.compose.project: ops
        com.docker.compose.service: cache
    ports:
        - name: cache-6379
          port: 6379
          targetPort: cache-6379
