fantasy-assistant/ops/bridge/base/workers-expose.yaml
#! workers-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: workers
    namespace: ops
    labels:
        com.docker.compose.project: ops
        com.docker.compose.service: workers
spec:
    selector:
        com.docker.compose.project: ops
        com.docker.compose.service: workers
    ports:
        - name: workers-8000
          port: 8000
          targetPort: workers-8000
